--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title} 
+  p Just making a change to see change in the browser.
+  button(type="button", class="btn btn-warning")= 'Press Me'
