--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,12 @@ block content
   p Welcome to #{title} 
   p Just making a change to see change in the browser.
   button(type="button", class="btn btn-warning")= 'Press Me'
+
+  div(id="target") text of Display 
+
+  script.
+    var client_count = 0;
+    function update(){
+      client_count +=1;
+      document.getElementById("target").innerHTML = "Value now " + client_count;
+    }
