--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   h1= title
   p Welcome to #{title} 
   p Just making a change to see change in the browser.
-  button(type="button", class="btn btn-warning")= 'Press Me'
+  button(type="button",onclick='update()', class="btn btn-warning")= 'Press Me'
 
   div(id="target") text of Display 
 
