--- a/views/addmods.pug
+++ b/views/addmods.pug
@@ -10,7 +10,7 @@ block content
   else if rows > 6 || rows < 1
     p row value is out of range
   else if cols>6 || rows<1
-    p column value is out of range 
+    p colum value is out of range 
   else 
     table#outer 
     - for (let i=0;i<rows;i++) {
