--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
   script.
     var client_count = 0;
     function update(){
-      client_count +=1;
+      client_count ++;
       document.getElementById("target").innerHTML = "Value now " + client_count;
     }
 
