--- a/views/selector.pug
+++ b/views/selector.pug
@@ -5,7 +5,7 @@ block content
   - let image_names = ['img1.jpg','img2.jpg','img3.jpg','img4.jpg','img5.jpg']
   - for(let i=0;i<3;i++){
       - let numb = Math.floor(Math.random()*5)
-      - let imgname = image_names[rno]
+      - let imgname = image_names[numb]
 
       img(src=`images/${imgname}` alt='flowers' style='width:300px; height:300px;')
       |    
