--- a/views/flowers.pug
+++ b/views/flowers.pug
@@ -4,7 +4,11 @@ block content
   h1= title
   - const flowers = ['Flower_type','Color','Cost']
   - let results; 
+  script.
+    function buy(x){
+      alert('Purchased Item: ' + x)
+   } 
   div(class='container-fluid')
     div(class='row')
       each results, index in flowers
-        div(class='col-sm-2') #{results} 
+        div(class='col-sm-2') onclick='buy('+index+')') #{results} 
