--- a/views/flowers.pug
+++ b/views/flowers.pug
@@ -5,8 +5,8 @@ block content
   - const flowers = ['Flower_type','Color','Cost']
   - let results; 
   script.
-    function buy(x){
-      alert('Purchased Item: ' + x)
+    function buy(f){
+      alert('Purchased Item: ' + f)
    } 
   div(class='container-fluid')
     div(class='row')
