--- a/views/flowers.pug
+++ b/views/flowers.pug
@@ -11,4 +11,4 @@ block content
   div(class='container-fluid')
     div(class='row')
       each results, index in flowers
-        div(class='col-sm-2' onclick='buy('+index+')') #{results} 
+        div(class='col-sm-2' onclick='buy('+index+')') #{results} #{index} 
